# push_swap

./: CMakeLists.txt  DOC_mlx.c  Makefile  TRY.txt  TRY1.txt  a.out  author  checker  checker.c  checker_instructions.c  draw.c  errorstempfile.txt  five_sort.c  instructions.c  list_max.c  my_checker  print.c  push_swap  push_swap.c  push_swap.h  split_a.c  split_b.c  t1.txt  t2.txt  t250.txt  t5.txt  t500.txt  t500long.txt  t500new.txt  t50m.txt  test  test.txt  test0.sh  test100.txt  three_stack_a.c  valid_arg.c  visual_args.c  visualisation.c
libft/: Makefile  f_beauty.c  f_fraction.c  f_integer.c  f_second_addend.c  f_summ.c  ft_atoi.c  ft_atoi_long.c  ft_bzero.c  ft_ib.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  (+46 more)
libft/includes/: ft_printf.h  get_next_line.h  libft.h
mlx/: CMakeLists.txt  Makefile  mlx_int_wait_first_expose.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
