cmake_minimum_required(VERSION 3.14)
project(git_push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft/includes)

add_executable(git_push_swap
        libft/includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/f_beauty.c
        libft/f_fraction.c
        libft/f_integer.c
        libft/f_second_addend.c
        libft/f_summ.c
        libft/ft_atoi.c
        libft/ft_atoi_long.c
        libft/ft_bzero.c
        libft/ft_ib.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_printf.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_str_is_lowercase.c
        libft/ft_str_is_uppercase.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlowcase.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupcase.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_uib.c
        libft/ft_wordcount.c
        libft/fun_csp.c
        libft/fun_di.c
        libft/fun_f.c
        libft/fun_flags.c
        libft/fun_format.c
        libft/fun_uo.c
        libft/fun_x.c
        libft/get_next_line.c
        libft/initialization.c
        libft/mod.c
        libft/trash.c
        libft/x_trash.c
        instructions.c
        print.c
        push_swap.c
        push_swap.h
        valid_arg.c)
